--- a/src/global.css
+++ b/src/global.css
@@ -26,11 +26,21 @@ footer {
 }
 
 .tool-container {
+    display: flex;
+    flex-direction: column;
     box-sizing: content-box;
-    height: 120px;
+    height: 160px;
 }
 
 .main-container .react-colorful {
     width: 100%;
     height: 100%;
+}
+
+.tool-container-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-grow: 1;
 }
