--- a/src/global.css
+++ b/src/global.css
@@ -1,46 +1,58 @@
 body {
-    background-color: #404854;
+  background-color: #404854;
 }
 
 footer {
-    border-top: solid 1px ;
-    margin: 4px;
+  border-top: solid 1px;
+  margin: 4px;
 }
 
 .root-container {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 50px 1fr 26px;
-    height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 50px 1fr 26px;
+  height: 100vh;
 }
 
 .main-container {
-    display:flex;
-    flex-direction: column;
-    gap: 10px;
-    padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding: 8px;
 }
 
-.main-container div:first-child {
-    flex-grow: 1;
+.main-container > * {
+  flex-grow: 1;
 }
 
 .tool-container {
-    display: flex;
-    flex-direction: column;
-    box-sizing: content-box;
-    height: 160px;
+  display: flex;
+  flex-direction: column;
+  box-sizing: content-box;
+  gap: 12px;
 }
 
-.main-container .react-colorful {
-    width: 100%;
-    height: 100%;
+.tool-container .react-colorful {
+  flex-direction: row;
+  width: 200%;
+  box-sizing: border-box;
+  height: 100%;
 }
 
-.tool-container-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    flex-grow: 1;
+.tool-container .react-colorful__saturation {
+  width: 50%;
+  margin-right: 8px;
+  border-radius: 2px;
+  border-bottom: 0;
+  box-shadow: 0 0 0 0 rgba(76, 144, 240, 0), 0 0 0 0 rgba(76, 144, 240, 0), 0 0 0 0 rgba(76, 144, 240, 0), inset 0 0 0 1px rgba(255, 255, 255, 0.2),
+    inset 0 -1px 1px 0 #8f99a8;
+}
+
+.tool-container .react-colorful__hue {
+  height: 29px;
+  width: 49%;
+  margin: 0 8px;
+  border-radius: 2px;
+  box-shadow: 0 0 0 0 rgba(76, 144, 240, 0), 0 0 0 0 rgba(76, 144, 240, 0), 0 0 0 0 rgba(76, 144, 240, 0), inset 0 0 0 1px rgba(255, 255, 255, 0.2),
+    inset 0 -1px 1px 0 #8f99a8;
 }
