--- a/src/global.css
+++ b/src/global.css
@@ -19,7 +19,10 @@ footer {
   flex-direction: column;
   gap: 8px;
   padding: 8px;
-  min-height: 0 ;
+  min-height: 0;
+  min-width: 0;
+  height: 100%;
+  width: 100%;
 }
 
 .main-container > div:first-child {
